 Sun May 16 22:21:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* proc.c (mnew): initialize a field.  a patch from Takahiro Kambe.
 	  [ruby-dev:41312]
 
Sun May 16 17:16:09 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* proc.c (proc_binding): don't propagative filename and line_no of
	  binding that is created from C level.  [ruby-dev:41322]

	* vm_eval.c (eval_string_with_cref): ditto.

Sun May 16 13:55:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_loaderror): use locale string, not ascii-8bit.

Sun May 16 21:14:04 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ruby/test_rubyoptions.rb (TestRubyOptions#test_segv_test):
	  fixes "NoMethodError: undefined method `[]=' for nil:NilClass"

Fri May 14 01:17:10 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_core.c (rb_thread_struct): add a field for sigaltstack.

	* thread_pthread.c (thread_start_func_1): initialize machine stack
	  information.

	* thread.c (thread_start_func_2): set sigaltstack for each sub thread.
	  [ruby-core:24540] [ruby-core:30207]

Thu May 13 07:37:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/sdbm/_sdbm.c: include unistd.h before sdbm.h for off_t.
	  fix compilation problem on FreeBSD 6.4.

Wed May 12 11:39:10 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb: test all IPPROTO_* constants for recent Win32
	  SDK.

Tue May 11 23:07:22 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test IPPROTO_IP and IPPROTO_IPV6 constants.

	* ext/socket/mkconstants.rb: define macros for enum.

	  [ruby-dev:38849]

Wed May 12 09:21:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_initialize_m): fix wrong index for the lang
	  option's value 'N'. reported by Masaya TARUI via IRC.

Tue May 11 21:53:18 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rake/test_task_arguments.rb: makes ENV empty during tests
	  because ENV may change the behavior of Rake::TaskArguments.
	  [ruby-core:29984]

Tue May 11 09:57:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
