@@ -1,3 +1,9 @@
+Mon May 17 11:09:58 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* lib/fileutils.rb (FileUtils::Entry_#entries): returns pathname in
+	  UTF-8 on Windows to allow FileUtils accessing all pathnames
+	  internally.
+
  Sun May 16 22:21:32 2010  Yusuke Endoh  <mame@tsg.ne.jp>
  
  	* proc.c (mnew): initialize a field.  a patch from Takahiro Kambe.
